--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,12 @@
+@online{DestinEHumanHeat,
+  title = {{{DestinE}} for Human Heat Stress: {{ECMWF}} Use Case to Tackle Urban Heat Islands},
+  shorttitle = {{{DestinE}} for Human Heat Stress},
+  url = {https://stories.ecmwf.int/destine-for-human-heat-stress-ecmwf-use-case-to-tackle-urban-heat-islands/},
+  urldate = {2024-01-29},
+  langid = {english},
+  file = {C:\Users\shaun\Zotero\storage\P49FISK3\index.html}
+}
+
 @online{earthsciencedatasystemsWhatRemoteSensing2019,
   type = {Backgrounder},
   title = {What Is {{Remote Sensing}}? | {{Earthdata}}},
@@ -66,6 +75,19 @@
   file = {C\:\\Users\\shaun\\Zotero\\storage\\5FXAIDZX\\Manvi et al. - 2023 - GeoLLM Extracting Geospatial Knowledge from Large.pdf;C\:\\Users\\shaun\\Zotero\\storage\\P89BHQUM\\Manvi et al. - 2023 - GeoLLM Extracting Geospatial Knowledge from Large.html}
 }
 
+@article{masekLandsatSurfaceReflectance2006,
+  title = {A {{Landsat Surface Reflectance Data Set}} for {{North America}}, 1990–2000},
+  author = {Masek, Jeffrey and Vermote, E. and Saleous, Nazmi and Wolfe, Robert and Hall, Forrest and Huemmrich, Karl and Gao, Feng and Kutler, Jonathan and Lim, Teng-Kui},
+  date = {2006-02-01},
+  journaltitle = {Geoscience and Remote Sensing Letters, IEEE},
+  shortjournal = {Geoscience and Remote Sensing Letters, IEEE},
+  volume = {3},
+  pages = {68--72},
+  doi = {10.1109/LGRS.2005.857030},
+  abstract = {The Landsat Ecosystem Disturbance Adaptive Processing System (LEDAPS) at the National Aeronautics and Space Administration (NASA) Goddard Space Flight Center has processed and released 2100 Landsat Thematic Mapper and Enhanced Thematic Mapper Plus surface reflectance scenes, providing 30-m resolution wall-to-wall reflectance coverage for North America for epochs centered on 1990 and 2000. This dataset can support decadal assessments of environmental and land-cover change, production of reflectance-based biophysical products, and applications that merge reflectance data from multiple sensors [e.g., the Advanced Spaceborne Thermal Emission and Reflection Radiometer, Multiangle Imaging Spectroradiometer, Moderate Resolution Imaging Spectroradiometer (MODIS)]. The raw imagery was obtained from the orthorectified Landsat GeoCover dataset, purchased by NASA from the Earth Satellite Corporation. Through the LEDAPS project, these data were calibrated, converted to top-of-atmosphere reflectance, and then atmospherically corrected using the MODIS/6S methodology. Initial comparisons with ground-based optical thickness measurements and simultaneously acquired MODIS imagery indicate comparable uncertainty in Landsat surface reflectance compared to the standard MODIS reflectance product (the greater of 0.5\% absolute reflectance or 5\% of the recorded reflectance value). The rapid automated nature of the processing stream also paves the way for routine high-level products from future Landsat sensors.},
+  file = {C:\Users\shaun\Zotero\storage\CJ4BX4PA\Masek et al. - 2006 - A Landsat Surface Reflectance Data Set for North A.pdf}
+}
+
 @online{MeasuringGrowthUsing2013,
   title = {Measuring {{Growth}} Using {{Satellite Imagery}} and {{Spatial Analysis}}},
   date = {2013-07-01T12:10:03-04:00},
@@ -74,6 +96,27 @@
   langid = {english},
   organization = {{Neptis Foundation}},
   file = {C:\Users\shaun\Zotero\storage\V3TNWIAI\measuring-growth-using-satellite-imagery-and-spatial-analysis.html}
+}
+
+@online{PDFAtmosphericCorrection,
+  title = {({{PDF}}) {{Atmospheric}} Correction of {{Landsat ETM}}+ Land Surface Imagery. {{I}}. {{Methods}}},
+  url = {https://www.researchgate.net/publication/3202775_Atmospheric_correction_of_Landsat_ETM_land_surface_imagery_I_Methods/figures?lo=1},
+  urldate = {2024-01-30},
+  file = {C:\Users\shaun\Zotero\storage\87G64F2K\figures.html}
+}
+
+@online{PDFAtmosphericCorrectiona,
+  title = {({{PDF}}) {{Atmospheric}} Correction of {{Landsat ETM}}+ Land Surface Imagery. {{I}}. {{Methods}}},
+  url = {https://www.researchgate.net/publication/3202775_Atmospheric_correction_of_Landsat_ETM_land_surface_imagery_I_Methods},
+  urldate = {2024-01-30},
+  file = {C:\Users\shaun\Zotero\storage\FX4FCBT2\3202775_Atmospheric_correction_of_Landsat_ETM_land_surface_imagery_I_Methods.html}
+}
+
+@online{PDFLandUse,
+  title = {({{PDF}}) {{Land}} Use and Land Cover Change Detection Using Satellite Remote Sensing Techniques in the Mountainous {{Three Gorges Area}}, {{China}}},
+  url = {https://www.researchgate.net/publication/248978097_Land_use_and_land_cover_change_detection_using_satellite_remote_sensing_techniques_in_the_mountainous_Three_Gorges_Area_China/figures?lo=1},
+  urldate = {2024-01-30},
+  file = {C:\Users\shaun\Zotero\storage\4A5JYAGN\figures.html}
 }
 
 @online{RemoteSensingSatellite,
@@ -102,26 +145,6 @@
   file = {C:\Users\shaun\Zotero\storage\7PWJ3745\Schumann et al. - 2023 - Flood Modeling and Prediction Using Earth Observat.pdf}
 }
 
-@article{schumannFloodModelingPrediction2023a,
-  title = {Flood {{Modeling}} and {{Prediction Using Earth Observation Data}}},
-  author = {Schumann, Guy and Giustarini, Laura and Tarpanelli, Angelica and Jarihani, Ben and Martinis, Sandro},
-  date = {2023-10-01},
-  journaltitle = {Surveys in Geophysics},
-  shortjournal = {Surv Geophys},
-  volume = {44},
-  number = {5},
-  pages = {1553--1578},
-  publisher = {{Springer Netherlands}},
-  issn = {1573-0956},
-  doi = {10.1007/s10712-022-09751-y},
-  url = {https://link.springer.com/article/10.1007/s10712-022-09751-y},
-  urldate = {2024-01-28},
-  abstract = {Abstract The ability to map floods from satellites has been known for over 40 years. Early images of floods were rather difficult to obtain, and flood mapping from satellites was thus rather opportunistic and limited to only a few case studies. However, over the last decade, with a proliferation of open-access EO data, there has been much progress in the development of Earth Observation products and services tailored to various end-user needs, as well as its integration with flood modeling and prediction efforts. This article provides an overview of the use of satellite remote sensing of floods and outlines recent advances in its application for flood mapping, monitoring and its integration with flood models. Strengths and limitations are discussed throughput, and the article concludes by looking at new developments.},
-  issue = {5},
-  langid = {english},
-  file = {C:\Users\shaun\Zotero\storage\4NTW3MEQ\Schumann et al. - 2023 - Flood Modeling and Prediction Using Earth Observat.pdf}
-}
-
 @article{songAdvancesGeocomputationGeospatial2023,
   title = {Advances in Geocomputation and Geospatial Artificial Intelligence ({{GeoAI}}) for Mapping},
   author = {Song, Yongze and Kalacska, Margaret and Gašparović, Mateo and Yao, Jing and Najibi, Nasser},
@@ -137,6 +160,19 @@
   abstract = {Geocomputation and geospatial artificial intelligence (GeoAI) have essential roles in advancing geographic information science (GIS) and Earth observation to a new stage. GeoAI has enhanced traditional geospatial analysis and mapping, altering the methods for understanding and managing complex human–natural systems. However, there are still challenges in various aspects of geospatial applications related to natural, built, and social environments, and in integrating unique geospatial features into GeoAI models. Meanwhile, geospatial and Earth data are critical components in geocomputation and GeoAI studies, as they can effectively reveal geospatial patterns, factors, relationships, and decision-making processes. This editorial provides a comprehensive overview of geocomputation and GeoAI applications in mapping, classifying them into four categories: (i) buildings and infrastructure, (ii) land use analysis, (iii) natural environment and hazards, and (iv) social issues and human activities. In addition, the editorial summarizes geospatial and Earth data in case studies into seven categories, including in-situ data, geospatial datasets, crowdsourced geospatial data (i.e., geospatial big data), remote sensing data, photogrammetry data, LiDAR, and statistical data. Finally, the editorial presents challenges and opportunities for future research.},
   keywords = {Earth observation,Geocomputation,Geographical information science (GIS),Geospatial artificial intelligence (GeoAI),Mapping,Remote sensing},
   file = {C:\Users\shaun\Zotero\storage\2R9F4W69\Song et al. - 2023 - Advances in geocomputation and geospatial artifici.html}
+}
+
+@article{suomalainenDirectReflectanceTransformation2021,
+  title = {Direct Reflectance Transformation Methodology for Drone-Based Hyperspectral Imaging},
+  author = {Suomalainen, Juha and Alves de Oliveira, Raquel and Hakala, Teemu and Koivumäki, Niko and Markelin, Lauri and Näsi, Roope and Honkavaara, Eija},
+  date = {2021-12-01},
+  journaltitle = {Remote Sensing of Environment},
+  shortjournal = {Remote Sensing of Environment},
+  volume = {266},
+  pages = {112691},
+  doi = {10.1016/j.rse.2021.112691},
+  abstract = {Multi- and hyperspectral cameras on drones can be valuable tools in environmental monitoring. A significant shortcoming complicating their usage in quantitative remote sensing applications is insufficient robust radiometric calibration methods. In a direct reflectance transformation method, the drone is equipped with a camera and an irradiance sensor, allowing transformation of image pixel values to reflectance factors without ground reference data. This method requires the sensors to be calibrated with higher accuracy than what is usually required by the empirical line method (ELM), but consequently it offers benefits in robustness, ease of operation, and ability to be used on Beyond-Visual Line of Sight flights. The objective of this study was to develop and assess a drone-based workflow for direct reflectance transformation and implement it on our hyperspectral remote sensing system. A novel atmospheric correction method is also introduced, using two reference panels, but, unlike in the ELM, the correction is not directly affected by changes in the illumination. The sensor system consists of a hyperspectral camera (Rikola HSI, by Senop) and an onboard irradiance spectrometer (FGI AIRS), which were both given thorough radiometric calibrations. In laboratory tests and in a flight experiment, the FGI AIRS tilt-corrected irradiances had accuracy better than 1.9\% at solar zenith angles up to 70°. The system's low-altitude reflectance factor accuracy was assessed in a flight experiment using reflectance reference panels, where the normalized root mean square errors (NRMSE) were less than ±2\% for the light panels (25\% and 50\%) and less than ±4\% for the dark panels (5\% and 10\%). In the high-altitude images, taken at 100–150 m altitude, the NRMSEs without atmospheric correction were within 1.4\%–8.7\% for VIS bands and 2.0\%–18.5\% for NIR bands. Significant atmospheric effects appeared already at 50 m flight altitude. The proposed atmospheric correction was found to be practical and it decreased the high-altitude NRMSEs to 1.3\%–2.6\% for VIS bands and to 2.3\%–5.3\% for NIR bands. Overall, the workflow was found to be efficient and to provide similar accuracies as the ELM, but providing operational advantages in such challenging scenarios as in forest monitoring, large-scale autonomous mapping tasks, and real-time applications. Tests in varying illumination conditions showed that the reflectance factors of the gravel and vegetation targets varied up to 8\% between sunny and cloudy conditions due to reflectance anisotropy effects, while the direct reflectance workflow had better accuracy. This suggests that the varying illumination conditions have to be further accounted for in drone-based in quantitative remote sensing applications.},
+  file = {C:\Users\shaun\Zotero\storage\CDDQNCU4\Suomalainen et al. - 2021 - Direct reflectance transformation methodology for .pdf}
 }
 
 @article{wangUrbanDevelopmentAnalysis2021,
