--- a/week3.qmd
+++ b/week3.qmd
@@ -1,1 +1,43 @@
 # Corrections and Enhancements
+
+## Corrections
+
+Raw data coming from sensors are rarely immediately usable without being corrected for various interferences and effects. Here is
+
+1.  Geometric correction
+2.  Atmospheric correction
+3.  Topographic correction
+4.  Radiometric correction
+
+### Radiometric and Atmospheric corrections
+
+These processes describe translating raw light data from the sensor into 'true' information on the surface's reflectance property, without interference from the light source and the atmosphere.
+
+-   **Radiometric calibration** is the conversion from raw Digital Number to Spectral Radiance via a linear transformation $L_λ=Bias+(Gain∗DN)$. Radiance most often has units of watt/(steradian/square meter)
+
+-   **Atmospheric correction** involves the next step:
+
+    -   **TOA Radiance-to-Reflectance** correction removes effects of the light source (e.g. the sun) by calibrating radiation going down (irradiance) and up (radiance). TOA Reflectance still has the effect of the atmosphere and the surface material. If irradiance = radiance, we call this *hemispheric reflectance*
+
+        ![](images/clipboard-3513886623.png)
+
+    -   **TOA-to-BOA Reflectance** correction removes effects of the atmospheric conditions, leaving us with just data on the surface materials. If shadows and directional effects on reflectance have been dealt with, we get what is called *true reflectance***,** if not then it is called *apparent reflectance.*
+
+Atmospheric correction deserves out attention considering the effect of atmospheric scattering on the final results. Absorption and scattering create the haze which reduces the contrast, and can creates the “adjacency effect”, whereby radiance from pixels nearby mixed into pixel of interest. There are several types of atmospheric correction:
+
+1.  **Relative:** normalise intensities of different bands within a single image, or from many dates to one date. This can be done via *Dark Object Subtraction (DOS)*, *Empirical Line Correction*, or *Pseudo-invariant Features (PIFs)*
+2.  **Absolute:** change digital brightness values into scaled surface reflectance. We can then compare these scaled surface reflectance values across the planet, through *atmospheric radiative transfer models* (i.e. summer, tropical). To perform this correction, we also need local atmospheric visibility and image altitude. There are many tools for this purpose:
+    -   Paid: ACORN, FLAASH, QUAC, ATCOR
+    -   Free: SMAC, Orfeo Toolbox
+
+![ample of LEDAPS atmospheric correction. (a) Top-of-atmosphere (TOA) reflectance composite (bands 3,2,1) for Landsat-7 ETM+ image of San Francisco Bay (July 7, 1999); (b) Surface reflectance composite.](images/clipboard-2188628702.png)
+
+Finally, atmospheric correction to obtain true reflectance is not always necessary, for example, for classification of a single image, working on composite images, etc.
+
+### Geometric and topographic corrections
+
+Subsets of Georectification
+
+## In practice
+
+## Reflections
